feat(css): 手风琴；loading

--- a/src/assets/styles/global.less
+++ b/src/assets/styles/global.less
@@ -3,9 +3,10 @@
   &-center {
     &:extend(.flex);
     align-items: center;
-    &-center {
-      &:extend(.flex-center);
-      justify-content: center;
-    }
+  }
+  &-center-center {
+    &:extend(.flex);
+    align-items: center;
+    justify-content: center;
   }
 }
