--- a/src/assets/styles/global.less
+++ b/src/assets/styles/global.less
@@ -10,3 +10,10 @@
     justify-content: center;
   }
 }
+
+// 单行文本省略
+.text-ellipsis {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
