feat(css): css手风琴效果；button

--- a/src/assets/styles/global.less
+++ b/src/assets/styles/global.less
@@ -17,3 +17,15 @@
   text-overflow: ellipsis;
   overflow: hidden;
 }
+
+// 全局背景色
+.back_color {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #fff;
+  z-index: -1;
+}
